--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,14 @@
         </plugins>
     </build>
 
+	<repositories>
+	  <repository>
+		<name>jets3t</name>
+		<id>jets3t</id>
+		<url>http://www.jets3t.org/maven2</url>
+	  </repository>
+    </repositories>
+  
     <dependencies>
         <dependency>
             <groupId>org.apache.lucene</groupId>
@@ -55,6 +63,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>net.java.dev.jets3t</groupId>
+            <artifactId>jets3t</artifactId>
+            <version>0.9.0</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
