Comment out the stuff in CoreTest that uses the missing class TextDocument.
Add an S3 backing store test.  The test is excluded by default in the maven pom
because it needs an S3 key/secret/bucket tuple in system properties to work.

For now invoke like this:

mvn clean test -Dtest=S3BackingStoreTest -Daws.key=<thekey> -Daws.secret=<the secret> -Daws.bucket=<the bucket name>

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
                 <configuration>
                     <excludes>
                         <exclude>**/CACMDocTest.java</exclude>
+                        <exclude>**/S3BackingStoreTest.java</exclude>
                     </excludes>
                 </configuration>
             </plugin>
