--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
             <version>1.3.2</version>
         </dependency>
         <dependency>
+			<groupId>net.sf.ehcache</groupId>
+			<artifactId>ehcache-core</artifactId>
+			<version>2.4.3</version>
+		</dependency>
+		<dependency>
             <groupId>net.java.dev.jets3t</groupId>
             <artifactId>jets3t</artifactId>
             <version>0.9.0</version>
