--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,23 @@
                     </excludes>
                 </configuration>
             </plugin>
-        </plugins>
+	<plugin>
+		<groupId>com.github.github</groupId>
+		<artifactId>site-maven-plugin</artifactId>
+		<version>0.6</version>
+		<configuration>
+			<message>Creating site for ${project.version}</message>
+		</configuration>
+		<executions>
+			<execution>
+				<goals>
+					<goal>site</goal>
+				</goals>
+				<phase>site</phase>
+			</execution>
+		</executions>
+	</plugin>
+  </plugins>
     </build>
 
     <dependencies>
