--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <lucene.version>3.0.3</lucene.version>
         <java.version>1.6</java.version>
+		<github.global.server>github</github.global.server>
     </properties>
 
     <build>
@@ -49,6 +50,9 @@
 		<version>0.6</version>
 		<configuration>
 			<message>Creating site for ${project.version}</message>
+			<repositoryOwner>mrblog</repositoryOwner>
+              <repositoryName>KiraDB - a simple, lightweight NoSQL-style embedded database Java API</repositoryName>
+              <dryRun>true</dryRun>
 		</configuration>
 		<executions>
 			<execution>
